# oss-maintainer-copilot

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: application.md
examples/: issues.json
src/oss_maintainer_copilot/: __init__.py  application.py  audit.py  cli.py  release_notes.py  triage.py
tests/: test_application.py  test_audit.py  test_release_notes.py  test_triage.py
