[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-maintainer-copilot"
version = "0.1.0"
description = "Lightweight maintainer automation for open-source GitHub projects."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OSS Maintainer Copilot contributors" }]
keywords = ["open-source", "github", "maintainer", "triage", "release-notes", "codex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/DarkRoot-Cmd/oss-maintainer-copilot"
Issues = "https://github.com/DarkRoot-Cmd/oss-maintainer-copilot/issues"

[project.scripts]
oss-maintainer-copilot = "oss_maintainer_copilot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
